mdapi/objects/ltng_TenantChild__c.object
<CustomObject>
    <description>Some child object related to the Tenant</description>
    <label>Tenant Child</label>
    <nameField>
        <label>Tenant Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenant Children</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Note__c</fullName>
        <formula>Tenant__r.Note__c</formula>
        <inlineHelpText>Note on the parent record.</inlineHelpText>
        <label>Parent Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>ltng_Tenant__c</referenceTo>
        <relationshipLabel>Tenant Children</relationshipLabel>
        <relationshipName>Tenant_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tenant__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>